Added test for turning LED diodes off by using "black" as color to be set for device LED diodes. Read me file added.

--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
                     <input type="radio" id="blue" name="ledsColor" value="#0515C0">
                     <label for="blue">Blue</label>
                 </div>
+                <div>
+                    <input type="radio" id="black" name="ledsColor" value="#000000">
+                    <label for="black">Black</label>
+                </div>
             </div>
             <div style="display: flex; flex-direction: row; margin-bottom: 15px; gap: 30px;">
                 <div>
